changes maded to file 1 and 2 by programmer 1

--- a/file2.html
+++ b/file2.html
@@ -2,3 +2,4 @@ This is a file from programmer 2
 Line added by programmer 1
 Line added by programmer 1 again
 Line added by programmer 2
+another update by prg 1
